<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.piromsurang.ebookk.CartActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/show_amount_user_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:text=""/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cart"
        android:textSize="20pt"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_books"
        android:textAlignment="center"/>

    <ListView
        android:id="@+id/cart_listview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.88">
    </ListView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_cart_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="cancel"
            android:text="@string/cancel"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/process_checkout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed_checkout"
            android:onClick="proceedCheckout"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
